# bsv-overlay-cloudflare

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md
.githooks/: pre-commit
crates/low-app-layer/: Cargo.toml  wrangler.toml
crates/low-app-layer/src/: compaction.rs  cors.rs  lib.rs  logic.rs  results.rs  routes.rs  txany.rs
crates/low-app-layer/tests/: classifier_real_txs.rs
crates/overlay-cloudflare/: Cargo.toml  README.md  wrangler.low.toml  wrangler.toml.example
crates/overlay-cloudflare/src/: advertiser.rs  ban_storage.rs  broadcaster.rs  chain_tracker.rs  d1_discovery.rs  d1_storage.rs  ef.rs  error.rs  gasp_remote.rs  health_checker.rs  janitor.rs  lib.rs  mainnet_fanout.rs  ops.rs  peer_crawler.rs  proof_fetcher.rs  queue.rs  routes.rs
crates/overlay-cloudflare/src/d1/: mod.rs
crates/overlay-cloudflare/src/wallet/: brc42.rs  client.rs  mod.rs  signer.rs  types.rs
crates/overlay-cloudflare/tests/: sonicstar_live_parity.rs
crates/overlay-cloudflare/tests/fixtures/ef/: parent_a7d76588_beef.hex  subject_e98cdd1f.rawhex
crates/overlay-discovery/: Cargo.toml  README.md
crates/overlay-discovery/docs/: agent_topic.md  collected_lookup.md  collected_topic.md  dm_delegation_topic.md  low_lookup.md  low_topic.md  pot_lookup.md  pot_topic.md  potparty_lookup.md  potparty_topic.md  potrefund_lookup.md  potrefund_topic.md  proof_lookup.md  proof_topic.md  result_lookup.md  result_topic.md  reveal_lookup.md  reveal_topic.md  ship_lookup.md  ship_topic.md  slap_lookup.md  slap_topic.md  sonicstar_topic.md  uhrp_topic.md
crates/overlay-discovery/examples/: low_live_proof.rs  reveal_live_proof.rs
crates/overlay-discovery/src/: advertiser.rs  lib.rs  validation.rs
crates/overlay-discovery/src/agent/: lookup_service.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/collected/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/dm_delegation/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/low/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/pot/: lookup_service.rs  lowfund_topic_manager.rs  mod.rs  poc5_template.hex  storage.rs  topic_manager.rs
crates/overlay-discovery/src/potparty/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/potrefund/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/proof/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/result/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/reveal/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/ship/: lookup_service.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/slap/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/sonicstar/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/src/uhrp/: lookup_service.rs  mod.rs  storage.rs  topic_manager.rs
crates/overlay-discovery/tests/: CROSS_VALIDATOR.md  cross_validator.rs  ts_sdk_parity.rs
crates/overlay-engine/: Cargo.toml  README.md
crates/overlay-engine/src/: advertiser.rs  broadcaster.rs  builder.rs  engine.rs  gasp.rs  gasp_overlay.rs  health_checker.rs  lib.rs  lookup_service.rs  storage.rs  topic_manager.rs  types.rs
crates/overlay-engine/tests/: agent_e2e.rs  cross_sdk_beef.rs  engine_parity.rs  error_paths.rs  gasp_node.rs  gasp_sync.rs  janitor.rs  live_smoke.rs  live_worker.rs  merkle_proof.rs  property_tests.rs  spv_verification.rs  submit_spend_chain.rs  utxo_history.rs  wallet_e2e.rs  wire_compat.rs
crates/overlay-engine/tests/fixtures/: gasp_sync_response.json  ship_lookup_response.json  slap_lookup_response.json
docs/: 192-193-FINDINGS.md  BEEF-COMPACTION-DESIGN.md
parity-harness/: Cargo.toml  README.md
parity-harness/corpus/admin/: admin_ban_authed.json  admin_bans_authed.json  admin_config.json  admin_evictOutpoint_bad_bearer.json  admin_evictOutpoint_no_auth.json  admin_health_check_authed.json  admin_janitor_authed.json  admin_janitor_bad_bearer.json  admin_janitor_no_auth.json  admin_remove_token_authed.json  admin_ship_records_authed.json  admin_slap_records_authed.json  admin_startGASPSync_bad_bearer.json  admin_startGASPSync_no_auth.json  admin_stats_authed.json  admin_syncAdvertisements_authed.json  admin_syncAdvertisements_bad_bearer.json  admin_syncAdvertisements_no_auth.json  admin_unban_authed.json
parity-harness/corpus/arc_ingest/: arc_ingest_bad_body.json  arc_ingest_empty.json
parity-harness/corpus/gasp/: request_foreign_gasp_node_unknown.json  request_sync_response_ship_empty.json  request_sync_response_unknown_topic.json
parity-harness/corpus/golden/: cors_preflight_health.json  get_docs_ls_ship.json  get_docs_tm_ship.json  health.json  list_lookup_service_providers.json  list_topic_managers.json
parity-harness/corpus/lookup/: lookup_ls_ship_by_domain.json  lookup_ls_ship_by_topic.json  lookup_ls_ship_findAll.json  lookup_ls_slap_findAll.json  lookup_unknown_service.json
parity-harness/corpus/meta/: health_live.json  health_ready.json  root_dashboard.json
parity-harness/corpus/sonicstar/: get_docs_ls_sonicstar.json  get_docs_tm_sonicstar.json  lookup_ls_sonicstar_by_artistName.json  lookup_ls_sonicstar_by_genre.json  lookup_ls_sonicstar_by_searchText.json  lookup_ls_sonicstar_by_txid.json  lookup_ls_sonicstar_combined_artistName_and_genre.json  lookup_ls_sonicstar_empty_object.json  lookup_ls_sonicstar_findAll_object.json  lookup_ls_sonicstar_findAll_string.json  lookup_ls_sonicstar_invalid_null_query.json  lookup_ls_sonicstar_pagination.json
parity-harness/corpus/submit/: submit_empty_body.json  submit_missing_topics_header.json  submit_ship_beef.json  submit_slap_beef.json  submit_unknown_topic.json
parity-harness/src/: canonical.rs  client.rs  corpus.rs  differ.rs  main.rs  report.rs
plans/: sonicstar.md
reference/: Dockerfile  README.md  docker-compose.yml  (+1 more)
(+23 files in other folders)
