[workspace]
members = [
    "crates/overlay-engine",
    "crates/overlay-discovery",
    "crates/overlay-cloudflare",
    "crates/low-app-layer",
    "parity-harness",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Calhooon/bsv-overlay-cloudflare"

[workspace.dependencies]
# BSV SDK — crates.io. `overlay` feature = types + transaction + script +
# wallet. `auth`/`http` deliberately left off; they pull reqwest/tokio-net
# which fail on wasm32.
bsv-rs = { version = "0.3", features = ["overlay"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Async trait support
async-trait = "0.1"

# Hex encoding
hex = "0.4"

# URL parsing
url = "2"

# Logging
tracing = "0.1"
