[package]
name = "parity-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "parity-harness"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
walkdir = "2"
similar = "2"
