[package]
name = "bsv-overlay-cloudflare"
description = "Cloudflare Workers deployment for BSV Overlay Services"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# `cdylib` for the Cloudflare Workers wasm32 build (worker-build consumes
# this). `rlib` added so `cargo test -p overlay-cloudflare` can run the
# crate's own unit tests — e.g. `peer_crawler::tests::parse_output_list_*`
# — which are pure-Rust fixtures that don't need the worker runtime.
# Without `rlib`, cargo's test harness can't link, so tests are silently
# skipped (the "running 0 tests" symptom).
crate-type = ["cdylib", "rlib"]

[dependencies]
overlay-engine = { package = "bsv-overlay-engine", version = "0.1", path = "../overlay-engine" }
overlay-discovery = { package = "bsv-overlay-discovery", version = "0.1", path = "../overlay-discovery" }
bsv-rs = { workspace = true, features = ["wasm"] }
bsv-middleware-cloudflare = "0.1"
async-trait.workspace = true
base64 = "0.22"
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
worker = { version = "0.7", features = ["d1", "queue"] }
js-sys = "0.3"
