[package]
name = "bsv-overlay-discovery"
description = "SHIP/SLAP topic managers and lookup services for BSV overlay network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
overlay-engine = { package = "bsv-overlay-engine", version = "0.1", path = "../overlay-engine" }
bsv-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
hex.workspace = true
async-trait.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `std::time::SystemTime::now()` panics on wasm32-unknown-unknown — route
# timestamps through `js_sys::Date` on that target. Mirrors overlay-engine's
# `current_timestamp_ms`. See uhrp/topic_manager.rs::current_unix_seconds.
js-sys = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
