[package]
name = "overlay-engine"
description = "BSV Overlay Services Engine — transaction admission, lookup, GASP sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
memory-storage = []

[dependencies]
bsv-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
proptest = "1"
reqwest = { version = "0.12", features = ["json"] }
overlay-discovery = { path = "../overlay-discovery" }
hex = "0.4"
